--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -327,5 +327,42 @@
       "recipes": "الوصفات"
     },
     "readMore": "اقرأ المزيد"
+  },
+  "blogArticles": {
+    "1": {
+      "title": "الفواكه الاستوائية، رصيد لصحتك اليومية",
+      "excerpt": "🥭🐉 ماذا لو أصبحت فواكهك حلفاءك في العافية اليومية؟ غنية بالفيتامينات والألياف ومضادات الأكسدة، الفواكه الاستوائية أكثر بكثير من مجرد حلويات استوائية بسيطة. اكتشف لماذا تستحق مكاناً في روتين صحتك.",
+      "content": "🥭🐉 ماذا لو أصبحت فواكهك حلفاءك في العافية اليومية؟\n\nغنية بالفيتامينات والألياف ومضادات الأكسدة، الفواكه الاستوائية أكثر بكثير من مجرد حلويات استوائية بسيطة 🌴\n\nإليك لماذا تستحق مكاناً في روتين صحتك 👇\n\n✅ **طاقة طبيعية**\n➡️ فاكهة العاطفة أو القشطة تمنحك دفعة حقيقية بدون سكر مضاف اصطناعي.\n\n✅ **هضم ميسر**\n➡️ البابايا والمانجوستين تحتوي على إنزيمات طبيعية تساعد على الهضم الجيد.\n\n✅ **جمال البشرة**\n➡️ فاكهة التنين غنية بالماء ومضادات الأكسدة، مثالية لبشرة مرطبة ومشرقة.\n\n✅ **مناعة معززة**\n➡️ الرامبوتان والكوروبا محملان بفيتامين C: مثاليان لمواجهة نوبات التعب الصغيرة.\n\n💡 **نصيحة العافية:**\nأضف 1 أو 2 من الفواكه الاستوائية إلى فطورك أو السلطات أو العصائر كل يوم ولاحظ الفرق!"
+    },
+    "2": {
+      "title": "كيف تتعرف على فاكهة استوائية عالية الجودة؟",
+      "excerpt": "🥭🍍 قبل تذوق فاكهة استوائية، إليك 5 نصائح لاتخاذ الخيار الصحيح في السوق أو عبر الإنترنت. اكتشف كيفية التعرف على فاكهة ناضجة من خلال اللون والعطر والملمس وأكثر.",
+      "content": "🥭🍍 كيف تتعرف على فاكهة استوائية عالية الجودة؟\n\nقبل تذوق فاكهة استوائية، إليك 5 نصائح لاتخاذ الخيار الصحيح في السوق أو عبر الإنترنت ⬇️\n\n✅ **1. اللون**\nالفاكهة الناضجة لها لون زاهي ومنتظم.\n👉 مثال: المانجو الناضج أصفر/برتقالي، بدون بقع خضراء صلبة.\n\n✅ **2. العطر**\nالفاكهة الاستوائية الجيدة لها رائحة جيدة! اشم قاعدة الفاكهة:\n💡 رائحة حلوة = علامة جيدة على النضج.\n\n✅ **3. الملمس**\nيجب أن تكون القشرة طرية دون أن تكون طرية جداً.\n🥥 صلبة جداً = لم تنضج بعد / طرية جداً = نضجت أكثر من اللازم.\n\n✅ **4. الوزن**\nالفاكهة الثقيلة بالنسبة لحجمها غالباً ما تكون عصيرية جيداً.\n🍊 وزن أكثر = طعم أكثر.\n\n✅ **5. المنشأ والطازجة**\nفضل الفواكه المحصودة عند النضج والمستوردة من قبل المتخصصين"
+    },
+    "3": {
+      "title": "أي فاكهة استوائية تختار حسب رغباتك؟",
+      "excerpt": "🍍✨ فاكهية، منعشة، منشطة... كل فاكهة استوائية لها شخصيتها! لا تعرف أيها تختار؟ اكتشف دليلنا السريع لاختيار الفاكهة المثالية حسب مزاجك أو احتياجاتك.",
+      "content": "🍍✨ أي فاكهة استوائية تختار حسب رغباتك؟\n\nفاكهية، منعشة، منشطة... كل فاكهة استوائية لها شخصيتها!\n\nلا تعرف أيها تختار؟ إليك دليل سريع لمساعدتك حسب مزاجك أو احتياجاتك 👇\n\n💧 **تحتاج ترطيب؟**\n→ فاكهة التنين: غنية بالماء، مثالية بعد الرياضة أو في الطقس الحار!\n\n🍬 **تشتهي الحلاوة؟**\n→ البابايا أو القشطة: ملمس ذائب، طعم حلو ومريح\n\n⚡ **تحتاج دفعة طبيعية؟**\n→ فاكهة العاطفة: غنية بفيتامين C ومضادات الأكسدة، مثالية للحصول على الطاقة\n\n🧘‍♀️ **استراحة عافية؟**\n→ المانجوستين أو الفيجوا: جيدة للهضم والجهاز المناعي\n\n🎉 **مقبلات أو لحظة احتفالية؟**\n→ المانجوستين، الكوروبا أو الكارامبولا: مظاهر مذهلة، مثالية للمشاركة أو لإبرازها في وصفاتك!\n\n🌴 **ثق بحاسة التذوق لديك... أو دع نفسك تتفاجأ!**"
+    },
+    "4": {
+      "title": "ماذا لو أصبح تنويع فواكهك الاستوائية أفضل عادة صحية لديك؟",
+      "excerpt": "أكل الفواكه الاستوائية جيد. لكن تنويع الأنواع والألوان أفضل لصحتك! اكتشف لماذا التنوع أساسي لتعظيم الفوائد الغذائية.",
+      "content": "ماذا لو أصبح تنويع فواكهك الاستوائية أفضل عادة صحية لديك؟\n\nأكل الفواكه الاستوائية جيد. لكن تنويع الأنواع والألوان أفضل لصحتك! 💪🌿\n\nإليك لماذا التنوع أساسي:\n\n✅ **كل فاكهة لها عناصرها الغذائية الخاصة:**\nالمانجوستين غني بالزانثونات المضادة للأكسدة\nالبابايا تدعم الهضم بفضل إنزيماتها\nفاكهة التنين (أو البيتايا) مرطبة، غنية بالألياف ومضادات الأكسدة\nالقشطة مهدئة وغنية بفيتامينات B\nالرامبوتان يقوي المناعة بفيتامين C\n\n✅ **ألوان أكثر = فوائد أكثر!**\nالأصباغ الطبيعية (برتقالي، بنفسجي، أخضر، وردي) هي أيضاً حماة طبيعيون لخلاياك.\n\n✅ **رتابة أقل = متعة أكثر!**\nتغيير فواكهك بانتظام يعني أيضاً الحفاظ على الرغبة في الأكل الجيد، بدون إحباط."
+    },
+    "5": {
+      "title": "فوائد الفواكه الاستوائية على جهاز المناعة",
+      "excerpt": "🍍🥭 هل تعلم أن بعض الفواكه الاستوائية حلفاء حقيقيون لتقوية دفاعاتك الطبيعية؟ اكتشف 5 فواكه خارقة لدمجها في روتين صحتك لتعزيز مناعتك.",
+      "content": "🍍 فوائد الفواكه الاستوائية على جهاز المناعة 🥭\n\nهل تعلم أن بعض الفواكه الاستوائية حلفاء حقيقيون لتقوية دفاعاتك الطبيعية؟ 💪\n\nإليك 5 فواكه خارقة لدمجها في روتين صحتك:\n\n✅ **فاكهة العاطفة** – مصدر فيتامين C، تحفز إنتاج خلايا الدم البيضاء.\n\n✅ **البابايا** – تحتوي على إنزيم يسمى البابايين وفيتامينات C وE: كوكتيل مضاد للالتهابات.\n\n✅ **القشطة** – معروفة بخصائصها المضادة للبكتيريا والفيروسات الطبيعية.\n\n💡 بالإضافة إلى كونها لذيذة، هذه الفواكه الاستوائية تساعدك على الحصول على الطاقة ومقاومة الالتهابات بشكل أفضل، خاصة في فترات التعب أو تغيير الفصول.\n\n🌱 **نصيحة:** استهلكها طازجة، في العصائر، السلطات أو كعصير مضغوط للحفاظ على جميع فوائدها!"
+    },
+    "6": {
+      "title": "لماذا تختار فواكه استوائية من الزراعة المستدامة؟",
+      "excerpt": "🌍 في FruitExotica.ca، لا نختار الفواكه عشوائياً. نختارها باحترام للأرض... ولك! اكتشف 3 أسباب جيدة لتفضيل الزراعة المستدامة لفواكهك الاستوائية.",
+      "content": "🌍 لماذا تختار فواكه استوائية من الزراعة المستدامة؟\n\nفي FruitExotica.ca، لا نختار الفواكه عشوائياً. نختارها باحترام للأرض... ولك 🍍💚\n\nإليك 3 أسباب جيدة لتفضيل الزراعة المستدامة 👇\n\n✅ **1. احترام التربة والتنوع البيولوجي**\nالمزارع المستدامة تتجنب المبيدات الكيميائية الضارة وتحافظ على النظم البيئية الاستوائية 🌿\n\n✅ **2. هدر أقل، جودة أكثر**\nطرق زراعة معقولة = فواكه مقطوفة عند النضج، خسائر أقل، طعم أكثر 😋\n\n✅ **3. لصحتك وصحة الكوكب**\nكيماويات أقل، عناصر غذائية طبيعية أكثر 🌱 = خيار رابح على جميع الجبهات"
+    },
+    "7": {
+      "title": "التزامنا: زراعة محترمة للأرض والإنسان",
+      "excerpt": "نؤمن أن الفاكهة اللذيذة تبدأ بأرض محترمة. اكتشف التزامنا اليومي بالزراعة المستدامة، في تعاون مباشر مع منتجينا الشركاء المتحمسين.",
+      "content": "التزامنا: زراعة محترمة للأرض والإنسان\n\nنؤمن أن الفاكهة اللذيذة تبدأ بأرض محترمة.\n\nلهذا نلتزم كل يوم بالزراعة المستدامة، في تعاون مباشر مع منتجينا الشركاء.\n\n✅ **بدون مبيدات كيميائية:** فواكهنا تنمو في بيئة طبيعية، بدون منتجات ضارة لك أو للكوكب.\n\n✅ **طرق زراعية مسؤولة:** تسميد، إدارة المياه، دورة المحاصيل... كل إيماءة مهمة.\n\n✅ **دعم المجتمعات المحلية:** نعمل يداً بيد مع مزارعين متحمسين، لإنتاج أخلاقي وعادل.\n\n🍍 عندما تختار Fruit Exotica، تختار منتجات جيدة لصحتك وللكوكب.\n\n**وأنت، ما الإيماءات التي تقوم بها يومياً لتغذية أكثر مسؤولية؟**\n\n💚 **شارك هذا المنشور لدعم زراعة أكثر إنسانية.**"
+    }
   }
 }
