--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -327,5 +327,42 @@
       "recipes": "Recipes"
     },
     "readMore": "Read More"
+  },
+  "blogArticles": {
+    "1": {
+      "title": "Exotic fruits, an asset for your daily health",
+      "excerpt": "🥭🐉 What if your fruits became your everyday wellness allies? Rich in vitamins, fiber, and antioxidants, exotic fruits are much more than simple exotic treats. Discover why they deserve a place in your health routine.",
+      "content": "🥭🐉 What if your fruits became your everyday wellness allies?\n\nRich in vitamins, fiber, and antioxidants, exotic fruits are much more than simple exotic treats 🌴\n\nHere's why they deserve a place in your health routine 👇\n\n✅ **Natural energy**\n➡️ Passion fruit or soursop provide you with a real boost without added artificial sugar.\n\n✅ **Improved digestion**\n➡️ Papaya and mangosteen contain natural enzymes that help with proper digestion.\n\n✅ **Skin beauty**\n➡️ Dragon fruit is rich in water and antioxidants, perfect for hydrated and radiant skin.\n\n✅ **Boosted immunity**\n➡️ Rambutan and curuba are loaded with vitamin C: ideal for fighting off minor fatigue.\n\n💡 **Wellness tip:**\nAdd 1 or 2 exotic fruits to your breakfasts, salads, or smoothies every day and see the difference!"
+    },
+    "2": {
+      "title": "How to recognize a quality exotic fruit?",
+      "excerpt": "🥭🍍 Before tasting a tropical fruit, here are 5 tips to make the right choice at the market or online. Discover how to recognize a ripe fruit through color, fragrance, texture, and more.",
+      "content": "🥭🍍 How to recognize a quality exotic fruit?\n\nBefore tasting a tropical fruit, here are 5 tips to make the right choice at the market or online ⬇️\n\n✅ **1. Color**\nA ripe fruit has a vibrant and uniform color.\n👉 Example: a ripe mango is yellow/orange, without hard green spots.\n\n✅ **2. Fragrance**\nA good exotic fruit smells good! Smell the base of the fruit:\n💡 A sweet scent = good sign of ripeness.\n\n✅ **3. Texture**\nThe skin should be soft without being mushy.\n🥥 Too hard = not yet ripe / Too soft = overripe.\n\n✅ **4. Weight**\nA heavy fruit for its size is often quite juicy.\n🍊 More weight = more flavor.\n\n✅ **5. Origin & freshness**\nFavor fruits harvested at maturity and imported by specialists"
+    },
+    "3": {
+      "title": "Which exotic fruit to choose according to your desires?",
+      "excerpt": "🍍✨ Fruity, refreshing, energizing... each exotic fruit has its personality! You don't know which one to choose? Discover our quick guide to choose the perfect fruit according to your mood or needs.",
+      "content": "🍍✨ Which exotic fruit to choose according to your desires?\n\nFruity, refreshing, energizing... each exotic fruit has its personality!\n\nYou don't know which one to choose? Here's a quick guide to help you according to your mood or needs 👇\n\n💧 **Need hydration?**\n→ Dragon fruit: rich in water, perfect after sports or in hot weather!\n\n🍬 **Craving sweetness?**\n→ Papaya or soursop: melting texture, sweet and comforting taste\n\n⚡ **Natural boost needed?**\n→ Passion fruit: rich in vitamin C and antioxidants, ideal for energy boost\n\n🧘‍♀️ **Wellness break?**\n→ Mangosteen or feijoa: good for digestion and immune system\n\n🎉 **Aperitif or festive moment?**\n→ Mangosteen, curuba or carambola: amazing visuals, perfect to share or highlight in your recipes!\n\n🌴 **Trust your palate... or let yourself be surprised!**"
+    },
+    "4": {
+      "title": "What if varying your exotic fruits became your best health habit?",
+      "excerpt": "Eating exotic fruits is good. But varying species and colors is even better for your health! Discover why diversity is essential to maximize nutritional benefits.",
+      "content": "What if varying your exotic fruits became your best health habit?\n\nEating exotic fruits is good. But varying species and colors is even better for your health! 💪🌿\n\nHere's why diversity is essential:\n\n✅ **Each fruit has its own nutrients:**\nMangosteen is rich in antioxidant xanthones\nPapaya supports digestion thanks to its enzymes\nDragon fruit (or pitaya) is hydrating, rich in fiber and antioxidants\nSoursop is soothing and rich in B vitamins\nRambutan strengthens immunity with its vitamin C\n\n✅ **More colors = more benefits!**\nNatural pigments (orange, purple, green, pink) are also natural protectors for your cells.\n\n✅ **Less monotony = more pleasure!**\nChanging your fruits regularly also means keeping the desire to eat well, without frustration."
+    },
+    "5": {
+      "title": "The benefits of exotic fruits on the immune system",
+      "excerpt": "🍍🥭 Did you know that some exotic fruits are real allies to strengthen your natural defenses? Discover 5 super-fruits to integrate into your health routine to boost your immunity.",
+      "content": "🍍 The benefits of exotic fruits on the immune system 🥭\n\nDid you know that some exotic fruits are real allies to strengthen your natural defenses? 💪\n\nHere are 5 super-fruits to integrate into your health routine:\n\n✅ **Passion fruit** – Source of vitamin C, it stimulates white blood cell production.\n\n✅ **Papaya** – Contains an enzyme called papain and vitamins C and E: an anti-inflammatory cocktail.\n\n✅ **Soursop** – Known for its natural antibacterial and antiviral properties.\n\n💡 In addition to being delicious, these tropical fruits help you boost energy and better resist infections, especially during periods of fatigue or seasonal changes.\n\n🌱 **Tip:** consume them fresh, in smoothies, salads, or as pressed juice to preserve all their benefits!"
+    },
+    "6": {
+      "title": "Why choose exotic fruits from sustainable agriculture?",
+      "excerpt": "🌍 At FruitExotica.ca, we don't choose fruits randomly. We select them with respect for the earth... and for you! Discover 3 good reasons to favor sustainable agriculture for your exotic fruits.",
+      "content": "🌍 Why choose exotic fruits from sustainable agriculture?\n\nAt FruitExotica.ca, we don't choose fruits randomly. We select them with respect for the earth... and for you 🍍💚\n\nHere are 3 good reasons to favor sustainable agriculture 👇\n\n✅ **1. Respect for soils and biodiversity**\nSustainable plantations avoid harmful chemical pesticides and preserve tropical ecosystems 🌿\n\n✅ **2. Less waste, more quality**\nReasoned cultivation methods = fruits picked at maturity, less loss, more taste 😋\n\n✅ **3. For your health and the planet's**\nFewer chemicals, more natural nutrients 🌱 = a win-win choice on all fronts"
+    },
+    "7": {
+      "title": "Our commitment: agriculture respectful of the earth and people",
+      "excerpt": "We believe that a tasty fruit starts with respected land. Discover our daily commitment to sustainable agriculture, in direct collaboration with our passionate partner producers.",
+      "content": "Our commitment: agriculture respectful of the earth and people\n\nWe believe that a tasty fruit starts with respected land.\n\nThat's why we commit every day to sustainable agriculture, in direct collaboration with our partner producers.\n\n✅ **Without chemical pesticides:** our fruits grow in a natural environment, without products harmful to you or the planet.\n\n✅ **Responsible agricultural methods:** composting, water management, crop rotation... every gesture counts.\n\n✅ **Support for local communities:** we work hand in hand with passionate farmers, for ethical and fair production.\n\n🍍 When you choose Fruit Exotica, you choose products good for your health and the planet.\n\n**AND YOU, WHAT GESTURES DO YOU MAKE DAILY FOR MORE RESPONSIBLE EATING?**\n\n💚 **SHARE THIS POST TO SUPPORT MORE HUMAN AGRICULTURE.**"
+    }
   }
 }
