--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -327,5 +327,42 @@
       "recipes": "Recetas"
     },
     "readMore": "Leer Más"
+  },
+  "blogArticles": {
+    "1": {
+      "title": "Las frutas exóticas, un activo para tu salud diaria",
+      "excerpt": "🥭🐉 ¿Y si tus frutas se convirtieran en tus aliados de bienestar diario? Ricas en vitaminas, fibra y antioxidantes, las frutas exóticas son mucho más que simples dulces exóticos. Descubre por qué merecen un lugar en tu rutina de salud.",
+      "content": "🥭🐉 ¿Y si tus frutas se convirtieran en tus aliados de bienestar diario?\n\nRicas en vitaminas, fibra y antioxidantes, las frutas exóticas son mucho más que simples dulces exóticos 🌴\n\nAquí está por qué merecen un lugar en tu rutina de salud 👇\n\n✅ **Energía natural**\n➡️ La fruta de la pasión o la guanábana te brindan un verdadero impulso sin azúcar agregado artificial.\n\n✅ **Digestión facilitada**\n➡️ La papaya y el mangostán contienen enzimas naturales que ayudan a digerir bien.\n\n✅ **Belleza de la piel**\n➡️ La fruta del dragón es rica en agua y antioxidantes, perfecta para una piel hidratada y luminosa.\n\n✅ **Inmunidad reforzada**\n➡️ El rambután y la curuba están cargados de vitamina C: ideales para enfrentar pequeños golpes de fatiga.\n\n💡 **Consejo de bienestar:**\n¡Agrega 1 o 2 frutas exóticas a tus desayunos, ensaladas o batidos cada día y observa la diferencia!"
+    },
+    "2": {
+      "title": "¿Cómo reconocer una fruta exótica de calidad?",
+      "excerpt": "🥭🍍 Antes de degustar una fruta tropical, aquí tienes 5 consejos para hacer la elección correcta en el mercado o en línea. Descubre cómo reconocer una fruta madura a través del color, fragancia, textura y más.",
+      "content": "🥭🍍 ¿Cómo reconocer una fruta exótica de calidad?\n\nAntes de degustar una fruta tropical, aquí tienes 5 consejos para hacer la elección correcta en el mercado o en línea ⬇️\n\n✅ **1. El color**\nUna fruta madura tiene un color vibrante y uniforme.\n👉 Ejemplo: un mango maduro es amarillo/naranja, sin manchas verdes duras.\n\n✅ **2. La fragancia**\n¡Una buena fruta exótica huele bien! Huele la base de la fruta:\n💡 Un aroma dulce = buena señal de madurez.\n\n✅ **3. La textura**\nLa piel debe estar suave sin estar blanda.\n🥥 Muy dura = aún no está madura / Muy blanda = demasiado madura.\n\n✅ **4. El peso**\nUna fruta pesada para su tamaño suele ser bastante jugosa.\n🍊 Más peso = más sabor.\n\n✅ **5. Origen y frescura**\nPrivilegia frutas cosechadas en madurez e importadas por especialistas"
+    },
+    "3": {
+      "title": "¿Qué fruta exótica elegir según tus deseos?",
+      "excerpt": "🍍✨ Afrutada, refrescante, energizante... ¡cada fruta exótica tiene su personalidad! ¿No sabes cuál elegir? Descubre nuestra guía rápida para elegir la fruta perfecta según tu estado de ánimo o necesidades.",
+      "content": "🍍✨ ¿Qué fruta exótica elegir según tus deseos?\n\nAfrutada, refrescante, energizante... ¡cada fruta exótica tiene su personalidad!\n\n¿No sabes cuál elegir? Aquí tienes una guía rápida para ayudarte según tu estado de ánimo o necesidades 👇\n\n💧 **¿Necesitas hidratación?**\n→ Fruta del dragón: rica en agua, ¡perfecta después del deporte o en clima caluroso!\n\n🍬 **¿Antojo de dulzura?**\n→ Papaya o guanábana: textura que se derrite, sabor dulce y reconfortante\n\n⚡ **¿Necesitas un impulso natural?**\n→ fruta de la pasión: rica en vitamina C y antioxidantes, ideal para llenarte de energía\n\n🧘‍♀️ **¿Pausa de bienestar?**\n→ Mangostán o feijoa: buenos para la digestión y el sistema inmunológico\n\n🎉 **¿Aperitivo o momento festivo?**\n→ Mangostán, curuba o carambola: visuales sorprendentes, ¡perfectos para compartir o destacar en tus recetas!\n\n🌴 **Confía en tu paladar... ¡o déjate sorprender!**"
+    },
+    "4": {
+      "title": "¿Y si variar tus frutas exóticas se convirtiera en tu mejor hábito de salud?",
+      "excerpt": "Comer frutas exóticas es bueno. Pero variar las especies y colores es aún mejor para tu salud. Descubre por qué la diversidad es esencial para maximizar los beneficios nutricionales.",
+      "content": "¿Y si variar tus frutas exóticas se convirtiera en tu mejor hábito de salud?\n\nComer frutas exóticas es bueno. Pero variar las especies y colores es aún mejor para tu salud. 💪🌿\n\nAquí está por qué la diversidad es esencial:\n\n✅ **Cada fruta tiene sus propios nutrientes:**\nEl mangostán es rico en xantonas antioxidantes\nLa papaya apoya la digestión gracias a sus enzimas\nLa fruta del dragón (o pitaya) es hidratante, rica en fibra y antioxidantes\nLa guanábana es calmante y rica en vitaminas B\nEl rambután fortalece la inmunidad con su vitamina C\n\n✅ **¡Más colores = más beneficios!**\nLos pigmentos naturales (naranja, violeta, verde, rosa) también son protectores naturales para tus células.\n\n✅ **¡Menos monotonía = más placer!**\nCambiar regularmente tus frutas también significa mantener las ganas de comer bien, sin frustración."
+    },
+    "5": {
+      "title": "Los beneficios de las frutas exóticas en el sistema inmunológico",
+      "excerpt": "🍍🥭 ¿Sabías que algunas frutas exóticas son verdaderos aliados para fortalecer tus defensas naturales? Descubre 5 súper frutas para integrar en tu rutina de salud para potenciar tu inmunidad.",
+      "content": "🍍 Los beneficios de las frutas exóticas en el sistema inmunológico 🥭\n\n¿Sabías que algunas frutas exóticas son verdaderos aliados para fortalecer tus defensas naturales? 💪\n\nAquí tienes 5 súper frutas para integrar en tu rutina de salud:\n\n✅ **Fruta de la pasión** – Fuente de vitamina C, estimula la producción de glóbulos blancos.\n\n✅ **Papaya** – Contiene una enzima llamada papaína y vitaminas C y E: un cóctel antiinflamatorio.\n\n✅ **Guanábana** – Conocida por sus propiedades antibacterianas y antivirales naturales.\n\n💡 Además de ser deliciosas, estas frutas tropicales te ayudan a llenarte de energía y resistir mejor las infecciones, especialmente en períodos de fatiga o cambio de estación.\n\n🌱 **Consejo:** ¡consúmelas frescas, en batidos, ensaladas o como jugo prensado para conservar todos sus beneficios!"
+    },
+    "6": {
+      "title": "¿Por qué elegir frutas exóticas de la agricultura sostenible?",
+      "excerpt": "🌍 En FruitExotica.ca, no elegimos las frutas al azar. ¡Las seleccionamos con respeto por la tierra... y por ti! Descubre 3 buenas razones para favorecer la agricultura sostenible para tus frutas exóticas.",
+      "content": "🌍 ¿Por qué elegir frutas exóticas de la agricultura sostenible?\n\nEn FruitExotica.ca, no elegimos las frutas al azar. ¡Las seleccionamos con respeto por la tierra... y por ti 🍍💚\n\nAquí tienes 3 buenas razones para favorecer la agricultura sostenible 👇\n\n✅ **1. Respeto por los suelos y la biodiversidad**\nLas plantaciones sostenibles evitan los pesticidas químicos dañinos y preservan los ecosistemas tropicales 🌿\n\n✅ **2. Menos desperdicio, más calidad**\nMétodos de cultivo razonados = frutas cosechadas en madurez, menos pérdida, más sabor 😋\n\n✅ **3. Para tu salud y la del planeta**\nMenos químicos, más nutrientes naturales 🌱 = una elección ganadora en todos los frentes"
+    },
+    "7": {
+      "title": "Nuestro compromiso: una agricultura respetuosa de la tierra y las personas",
+      "excerpt": "Creemos que una fruta sabrosa comienza con una tierra respetada. Descubre nuestro compromiso diario con la agricultura sostenible, en colaboración directa con nuestros productores socios apasionados.",
+      "content": "Nuestro compromiso: una agricultura respetuosa de la tierra y las personas\n\nCreemos que una fruta sabrosa comienza con una tierra respetada.\n\nPor eso nos comprometemos cada día con la agricultura sostenible, en colaboración directa con nuestros productores socios.\n\n✅ **Sin pesticidas químicos:** nuestras frutas crecen en un ambiente natural, sin productos dañinos para ti o el planeta.\n\n✅ **Métodos agrícolas responsables:** compostaje, gestión del agua, rotación de cultivos... cada gesto cuenta.\n\n✅ **Apoyo a las comunidades locales:** trabajamos de la mano con agricultores apasionados, para una producción ética y equitativa.\n\n🍍 Cuando eliges Fruit Exotica, eliges productos buenos para tu salud y para el planeta.\n\n**¿Y TÚ, QUÉ GESTOS HACES A DIARIO PARA UNA ALIMENTACIÓN MÁS RESPONSABLE?**\n\n💚 **COMPARTE ESTA PUBLICACIÓN PARA APOYAR UNA AGRICULTURA MÁS HUMANA.**"
+    }
   }
 }
